Update images and content in portfolio

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>azeemtech-dev</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,13 +20,12 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<img src="images/mylogo.jpg" alt="My Picture" class="logo-image">
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>Ibrahim Azeem</h1>
+								<p>Software Engineer and Designer</p>
 							</div>
 						</div>
 						<nav>
@@ -47,23 +46,39 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>Hi, I'm Ibrahim Azeem, a passionate software developer and designer. I specialize in creating innovative and efficient solutions to complex problems. With a strong background in web development and a keen eye for design, I strive to deliver high-quality projects that exceed expectations.</p>
+    							<p>Throughout my career, I've worked on a variety of projects, ranging from developing interactive websites to designing user-friendly interfaces. I'm always eager to learn new technologies and improve my skills. Check out some of my <a href="#work">awesome work</a> below.</p>
+    							<p>When I'm not coding or designing, you can find me exploring new technologies, reading about the latest trends in tech, or enjoying outdoor activities. Feel free to connect with me on social media to stay updated with my latest projects and adventures.</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>Over the course of my career, I've had the opportunity to work on a diverse range of projects, each presenting unique challenges and learning experiences. Below are a few highlights:</p>
+								<p>
+								  <strong>Project 1: Interactive Website</strong><br>
+								  Developed a fully interactive website for a local business, featuring dynamic content and responsive design. Utilized technologies such as HTML5, CSS3, JavaScript, and React.
+								</p>
+								<p>
+								  <strong>Project 2: User Interface Design</strong><br>
+								  Designed a user-friendly interface for a mobile application, improving the user experience and increasing user engagement. Tools used include Figma, Sketch, and Adobe XD.
+								</p>
+								<p>
+								  <strong>Project 3: E-commerce Platform</strong><br>
+								  Created an e-commerce platform that handles transactions, inventory management, and customer support. Leveraged backend technologies such as Node.js, Express, and MongoDB.
+								</p>
+								<p>
+								  Each project has contributed to my growth as a developer and designer, allowing me to refine my skills and deliver exceptional results. For more details and examples of my work, feel free to explore my <a href="#portfolio">portfolio</a>.
+								</p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>Hello! I'm Ibrahim Azeem, a software developer and designer with a passion for technology and innovation. I specialize in web development and UI/UX design, creating user-centric applications that are both functional and aesthetically pleasing.</p>
+  								<p>I have a strong background in computer science and enjoy exploring new technologies and trends in the industry. Outside of work, I'm an avid reader and enjoy outdoor activities. Let's connect and discuss potential collaborations!</p>
 							</article>
 
 						<!-- Contact -->
@@ -90,10 +105,10 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.instagram.com/officialhonourable?igsh=MXBxY3lzY243aGFpOA==" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.instagram.com/officialhonourable?igsh=MXBxY3lzY243aGFpOA==" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/officialhonourable?igsh=MXBxY3lzY243aGFpOA==" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/azeemtech-dev" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
@@ -343,7 +358,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Untitled. Design: <a href="https://www.instagram.com/officialhonourable?igsh=MXBxY3lzY243aGFpOA==">azeemtech-dev</a>.</p>
 					</footer>
 
 			</div>
